[tool.poetry]
name = "main_env"
version = "0.2.0"
description = "Main environment for the experiments"
authors = ["Claudia Ehrig <claudia.ehrig@iis.fraunhofer.de>"]
license = "Fraunhofer IIS"
readme = "README.md"
packages = [{include = "experiments", from = "src"}]

[tool.poetry.dependencies]
python = "3.10.16"
numpy = "1.23.0"
mxnet = "1.9.1"
pandas = "1.5.3"
hydra-core = "1.3.2"
fastparquet = "0.7.1"
tsfresh = "0.20.2"
gluonts = "0.12.0"
setuptools = "^75.8.0"
pyyaml = "^6.0.2"
matplotlib = "^3.10.0"
torch = "^2.6.0"
plotly = "5.24.1"
statsmodels = "0.14.4"
seaborn = "0.13.2"

[tool.poetry.group.dev.dependencies]
build = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"





