[project]
name = "data-prep"
version = "0.1.0"
description = "Environment to run the file create_sources_and_targets.py test test"
authors = ["Claudia Ehrig <claudia.ehrig@iis.fraunhofer.de>"]
license = "Fraunhofer IIS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "k-means-constrained (>=0.7.5,<0.8.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "data_prep", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
